--- a/index.html
+++ b/index.html
@@ -8,20 +8,22 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-   <h1>Storm Trooper Feedback Form</h1> 
-    <img src="StormtrooperHelmetIcon.svg.png" alt="Storm Trooper Helmet">
-    
-   <form id="feedbackForm">
-        Name: <input id="name" type="text"><br>
-        Age: <input id="age" type="number"><br>
-        Phone: <input id="phone" type="number"><br>
-        Street: <input id="street" type="text"><br>
-        City: <input id="city" type="text"><br>
-        State: <input id="state" type="text"><br>
-        Zip Code: <input id="zip" type="number"><br>
-        Email: <input id="email" type="email"><br>
-        Feedback Message: <textarea id="message"></textarea><br>
-        <button>Submit</button>
-   </form>
+    <center>
+        <h1>Storm Trooper Feedback Form</h1> 
+        <img src="StormtrooperHelmetIcon.svg.png" alt="Storm Trooper Helmet">
+
+        <form id="feedbackForm">
+            Name: <input id="name" type="text"><br>
+            Age: <input id="age" type="number"><br>
+            Phone: <input id="phone" type="number"><br>
+            Street: <input id="street" type="text"><br>
+            City: <input id="city" type="text"><br>
+            State: <input id="state" type="text"><br>
+            Zip Code: <input id="zip" type="number"><br>
+            Email: <input id="email" type="email"><br>
+            Feedback Message: <textarea id="message"></textarea><br>
+            <button>Submit</button>
+        </form>
+   </center>
 </body>
 </html>
