--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <form id="feedbackForm">
             Name: <input id="name" type="text"><br>
             Age: <input id="age" type="number"><br>
-            Phone: <input id="phone" type="number"><br>
+            Phone: <input id="phone" type="text"><br>
             Street: <input id="street" type="text"><br>
             City: <input id="city" type="text"><br>
             State: <input id="state" type="text"><br>
